--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,12 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+        <!--JWT-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.8.2</version>
         </dependency>
 
         <!--test-->
